# math-system

./: CMakeLists.txt  mathsystem.cpp
math_core/: math_basic.cpp  math_basic.h  math_complex.cpp  math_complex.h  math_cordic.cpp  math_cordic.h  math_matrix.cpp  math_matrix.h
math_gui/: CMakeLists.txt  math  math_gui.cpp  math_gui.h  test.cpp
